# ladybird

./: .gitignore  CMakeLists.txt  vcpkg.json
AK/: CMakeLists.txt
Libraries/LibCore/: CMakeLists.txt  EventLoopImplementationUnix.cpp  IOSurface.cpp  MachPort.cpp  MachPort.h  Process.cpp  Process.h  StandardPaths.cpp  System.cpp
Libraries/LibCore/Platform/: ScopedAutoreleasePool.h
Libraries/LibGfx/: Bitmap.cpp  CMakeLists.txt  MetalContext.h  PaintingSurface.cpp  PaintingSurface.h  SharedImage.cpp  SharedImage.h  SharedImageBuffer.cpp  SharedImageBuffer.h  SkiaBackendContext.cpp  SkiaBackendContext.h  VulkanContext.cpp  VulkanContext.h  VulkanImage.cpp  VulkanImage.h
Libraries/LibGfx/Font/: FontDatabase.cpp  TypefaceSkia.cpp  TypefaceSkia.h
Libraries/LibIPC/: Attachment.h  CMakeLists.txt  Forward.h  MachBootstrapListener.cpp  ReceivedMessageBytes.cpp  ReceivedMessageBytes.h  SingleServer.h  Transport.h  TransportBootstrapIOS.h  TransportBootstrapIOS.mm  TransportBootstrapMach.cpp  TransportHandle.cpp  TransportHandle.h  TransportMachPort.cpp  TransportMachPort.h
Libraries/LibImageDecoders/: CMakeLists.txt
Libraries/LibJS/: CMakeLists.txt
Libraries/LibJS/Bytecode/AsmInterpreter/: AsmInterpreter.cpp
Libraries/LibMedia/: CMakeLists.txt
Libraries/LibRequests/: CMakeLists.txt
Libraries/LibSandbox/: Sandbox.cpp
Libraries/LibThreading/: Thread.cpp
Libraries/LibWasm/: CraneliftBridge.cpp
Libraries/LibWasm/AbstractMachine/: BytecodeInterpreter.cpp
Libraries/LibWeb/: CMakeLists.txt
Libraries/LibWeb/Page/: EventHandler.cpp
Libraries/LibWebView/: Application.cpp  Application.h  BrowserProcess.cpp  BrowserProcess.h  CMakeLists.txt  CompositorClient.cpp  HelperProcess.cpp  Process.cpp  Process.h  ProcessIOS.h  ProcessIOS.mm  ProcessManager.cpp  Utilities.cpp  ViewImplementation.cpp  WebContentClient.cpp
Meta/: ladybird.py
Meta/CMake/: audio.cmake  check_for_dependencies.cmake  compile_options.cmake  lagom_install_options.cmake  rust_crate.cmake  sanitizers.cmake  skia.cmake  targets.cmake  utils.cmake
Meta/CMake/vcpkg/base-triplets/: arm64-ios.cmake
Meta/CMake/vcpkg/debug-triplets/: arm64-ios.cmake
Meta/CMake/vcpkg/overlay-ports/angle/: portfile.cmake
Meta/CMake/vcpkg/overlay-ports/cpptrace/: portfile.cmake  vcpkg.json
Meta/CMake/vcpkg/overlay-ports/harfbuzz/: harfbuzzConfig.cmake.in  portfile.cmake  vcpkg.json
Meta/CMake/vcpkg/overlay-ports/libiconv/: portfile.cmake
Meta/CMake/vcpkg/overlay-ports/skia/: portfile.cmake  vcpkg.json
Meta/CMake/vcpkg/release-triplets/: arm64-ios.cmake
Meta/ClangPlugins/: CMakeLists.txt
Services/: RendererSandboxMacOS.cpp
Services/Compositor/: BackingStoreManager.cpp  CMakeLists.txt  SandboxMacOS.cpp  main.cpp
Services/ImageDecoder/: CMakeLists.txt  SandboxMacOS.cpp  main.cpp
Services/RequestServer/: CMakeLists.txt  Info.plist  SandboxMacOS.cpp  main.cpp
Services/WebContent/: CMakeLists.txt  ConnectionFromClient.cpp  ConnectionFromClient.h  Info.plist.in  PageClient.cpp  PageHost.cpp  PageHost.h  WebContentServer.ipc  WebDriverConnection.cpp  main.cpp
Services/WebWorker/: main.cpp
Tests/LibJS/: CMakeLists.txt
Tests/LibRegex/: CMakeLists.txt
Tests/LibWasm/: CMakeLists.txt
Tests/LibWeb/: CMakeLists.txt
Tests/Meta/: CMakeLists.txt
UI/: CMakeLists.txt
UI/Android/: BuildLagomTools.sh  CMakeLists.txt  build.gradle.kts
UI/Android/gradle/wrapper/: gradle-wrapper.properties
UI/Android/src/main/: AndroidManifest.xml
UI/Android/src/main/cpp/: ALooperEventLoopImplementation.cpp  ALooperEventLoopImplementation.h  ImageDecoderService.cpp  JNIHelpers.cpp  LadybirdActivity.cpp  (+7 more)
UI/cmake/: AndroidExtras.cmake  InstallRules.cmake
Utilities/: CMakeLists.txt
(+6 files in other folders)
